Notebooks for JDK 26